--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -39,32 +39,32 @@
     "clean": "pnpm clear && rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@algolia/client-search": "5.25.0",
-    "@cursorless/common": "workspace:*",
-    "@docsearch/react": "3.9.0",
-    "@docusaurus/core": "3.8.0",
-    "@docusaurus/preset-classic": "3.8.0",
-    "@docusaurus/theme-classic": "3.8.0",
-    "@docusaurus/theme-common": "3.8.0",
-    "@docusaurus/theme-search-algolia": "3.8.0",
-    "@mdx-js/react": "3.1.0",
-    "clsx": "2.1.1",
-    "mdast-util-find-and-replace": "3.0.2",
-    "prism-react-renderer": "2.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "unist-util-visit": "5.0.0"
+    "@algolia/client-search": "",
+    "@cursorless/common": "",
+    "@docsearch/react": "",
+    "@docusaurus/core": "",
+    "@docusaurus/preset-classic": "",
+    "@docusaurus/theme-classic": "",
+    "@docusaurus/theme-common": "",
+    "@docusaurus/theme-search-algolia": "",
+    "@mdx-js/react": "",
+    "clsx": "",
+    "mdast-util-find-and-replace": "",
+    "prism-react-renderer": "",
+    "react": "",
+    "react-dom": "",
+    "unist-util-visit": ""
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.8.0",
-    "@docusaurus/types": "3.8.0",
-    "@tailwindcss/postcss": "4.1.8",
-    "@tsconfig/docusaurus": "2.0.3",
-    "@types/mdast": "4.0.4",
-    "@types/react": "19.1.6",
-    "postcss": "8.5.4",
-    "tailwindcss": "3.4.14",
-    "typescript": "5.8.3",
-    "unified": "11.0.5"
+    "@docusaurus/module-type-aliases": "",
+    "@docusaurus/types": "",
+    "@tailwindcss/postcss": "",
+    "@tsconfig/docusaurus": "",
+    "@types/mdast": "",
+    "@types/react": "",
+    "postcss": "",
+    "tailwindcss": "",
+    "typescript": "",
+    "unified": ""
   }
 }
