--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   "engines": {
     "node": ">=20.16.0"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "pnpm -r build",
     "clean": "pnpm -r clean",
     "compile": "tsc --build && pnpm -r --if-present compile:esbuild",
     "fix:eslint": "pnpm lint:ts --fix",
     "fix:meta": "pnpm run meta-updater:base && pnpm -r exec prettier --write tsconfig.json package.json",
-    "fix:syncpack": "pnpm syncpack fix-mismatches",
     "init-vscode-sandbox": "pnpm --filter=@cursorless/cursorless-vscode init-launch-sandbox",
     "lint:meta": "pnpm run meta-updater:base --test",
     "lint:ts": "cross-env ESLINT_USE_FLAT_CONFIG=false eslint packages --ext ts,tsx,mts",
-    "lint": "pnpm run lint:meta && syncpack list-mismatches && pnpm run lint:ts",
+    "lint": "pnpm run lint:meta && pnpm run lint:ts",
     "meta-updater:base": "pnpm --filter=@cursorless/meta-updater build && meta-updater",
     "preinstall": "npx only-allow pnpm",
     "test-compile": "tsc --build",
@@ -31,25 +33,161 @@
     "watch:tsc": "tsc --build --watch"
   },
   "devDependencies": {
-    "@pnpm/meta-updater": "2.0.4",
-    "@types/node": "20.17.50",
-    "@typescript-eslint/eslint-plugin": "8.33.1",
-    "@typescript-eslint/parser": "8.33.1",
-    "cross-env": "7.0.3",
-    "esbuild": "0.25.5",
-    "eslint": "9.28.0",
-    "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "4.4.2",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-mocha": "10.5.0",
-    "eslint-plugin-unicorn": "56.0.1",
-    "eslint-plugin-unused-imports": "4.1.4",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.12",
-    "syncpack": "13.0.4",
-    "typescript": "5.8.3"
+    "@pnpm/meta-updater": "",
+    "@types/node": "",
+    "@typescript-eslint/eslint-plugin": "",
+    "@typescript-eslint/parser": "",
+    "cross-env": "",
+    "esbuild": "",
+    "eslint": "",
+    "eslint-config-prettier": "",
+    "eslint-import-resolver-typescript": "",
+    "eslint-plugin-import": "",
+    "eslint-plugin-mocha": "",
+    "eslint-plugin-unicorn": "",
+    "eslint-plugin-unused-imports": "",
+    "prettier": "",
+    "prettier-plugin-tailwindcss": "",
+    "typescript": ""
   },
   "pnpm": {
+    "overrides": {
+      "@algolia/client-search": "5.25.0",
+      "@cursorless/cheatsheet": "workspace:*",
+      "@cursorless/common": "workspace:*",
+      "@cursorless/cursorless-cheatsheet": "workspace:*",
+      "@cursorless/cursorless-engine": "workspace:*",
+      "@cursorless/cursorless-everywhere-talon-core": "workspace:*",
+      "@cursorless/cursorless-tutorial": "workspace:*",
+      "@cursorless/neovim-common": "workspace:*",
+      "@cursorless/neovim-registry": "workspace:*",
+      "@cursorless/node-common": "workspace:*",
+      "@cursorless/sentence-parser": "workspace:*",
+      "@cursorless/test-case-recorder": "workspace:*",
+      "@cursorless/vscode-common": "workspace:*",
+      "@docsearch/react": "3.9.0",
+      "@docusaurus/core": "3.8.0",
+      "@docusaurus/module-type-aliases": "3.8.0",
+      "@docusaurus/preset-classic": "3.8.0",
+      "@docusaurus/theme-classic": "3.8.0",
+      "@docusaurus/theme-common": "3.8.0",
+      "@docusaurus/theme-search-algolia": "3.8.0",
+      "@docusaurus/types": "3.8.0",
+      "@effortlessmotion/html-webpack-inline-source-plugin": "1.0.3",
+      "@fortawesome/fontawesome-svg-core": "6.7.2",
+      "@fortawesome/free-solid-svg-icons": "6.7.2",
+      "@fortawesome/react-fontawesome": "0.2.2",
+      "@mdx-js/loader": "3.1.0",
+      "@mdx-js/react": "3.1.0",
+      "@next/mdx": "15.3.3",
+      "@pnpm/lockfile-file": "9.1.3",
+      "@pnpm/logger": "1001.0.0",
+      "@pnpm/meta-updater": "2.0.4",
+      "@pnpm/types": "1000.6.0",
+      "@svgr/webpack": "8.1.0",
+      "@tailwindcss/postcss": "4.1.8",
+      "@testing-library/dom": "10.4.0",
+      "@testing-library/react": "16.3.0",
+      "@tsconfig/docusaurus": "2.0.3",
+      "@types/chai": "5.2.2",
+      "@types/cross-spawn": "6.0.6",
+      "@types/fs-extra": "11.0.4",
+      "@types/jest": "29.5.14",
+      "@types/js-yaml": "4.0.9",
+      "@types/lodash": "4.17.17",
+      "@types/lodash-es": "4.17.12",
+      "@types/mdast": "4.0.4",
+      "@types/mdx": "2.0.13",
+      "@types/mocha": "10.0.10",
+      "@types/moo": "0.5.10",
+      "@types/nearley": "2.11.5",
+      "@types/node": "20.17.50",
+      "@types/normalize-path": "3.0.2",
+      "@types/react": "19.1.6",
+      "@types/react-dom": "19.1.5",
+      "@types/react-helmet": "6.1.11",
+      "@types/semver": "7.7.0",
+      "@types/sinon": "17.0.4",
+      "@types/tail": "2.2.3",
+      "@types/tinycolor2": "1.4.6",
+      "@types/uuid": "10.0.0",
+      "@types/vscode": "1.82.0",
+      "@types/vscode-webview": "1.57.5",
+      "@types/webpack": "5.28.5",
+      "@typescript-eslint/eslint-plugin": "8.33.1",
+      "@typescript-eslint/parser": "8.33.1",
+      "@vscode/test-electron": "2.5.2",
+      "@webpack-cli/generators": "3.0.7",
+      "autoprefixer": "10.4.21",
+      "chai": "5.2.0",
+      "clsx": "2.1.1",
+      "cross-env": "7.0.3",
+      "cross-spawn": "7.0.6",
+      "css-loader": "7.1.2",
+      "esbuild": "0.25.5",
+      "eslint": "9.28.0",
+      "eslint-config-next": "15.3.3",
+      "eslint-config-prettier": "10.1.5",
+      "eslint-import-resolver-typescript": "4.4.2",
+      "eslint-plugin-import": "2.31.0",
+      "eslint-plugin-mocha": "10.5.0",
+      "eslint-plugin-unicorn": "56.0.1",
+      "eslint-plugin-unused-imports": "4.1.4",
+      "fast-check": "4.1.1",
+      "fast-xml-parser": "5.2.3",
+      "fs-extra": "11.3.0",
+      "glob": "11.0.2",
+      "html-webpack-plugin": "5.6.3",
+      "http-server": "14.1.1",
+      "immer": "10.1.1",
+      "immutability-helper": "3.1.1",
+      "itertools": "2.4.1",
+      "jest": "29.7.0",
+      "jest-environment-jsdom": "30.0.0-beta.3",
+      "js-yaml": "4.1.0",
+      "lodash": "4.17.21",
+      "lodash-es": "4.17.21",
+      "mdast-util-find-and-replace": "3.0.2",
+      "mocha": "11.5.0",
+      "moo": "0.5.2",
+      "nearley": "2.20.1",
+      "neovim": "5.3.0",
+      "next": "15.3.3",
+      "node-html-parser": "7.0.1",
+      "normalize-path": "3.0.0",
+      "path-exists": "5.0.0",
+      "postcss": "8.5.4",
+      "postcss-loader": "8.1.1",
+      "prettier": "3.3.3",
+      "prettier-plugin-tailwindcss": "0.6.12",
+      "prism-react-renderer": "2.4.1",
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
+      "react-player": "2.16.0",
+      "react-string-replace": "1.1.1",
+      "react-use": "17.6.0",
+      "semver": "7.7.2",
+      "sinon": "20.0.0",
+      "style-loader": "4.0.0",
+      "tail": "2.2.6",
+      "tailwindcss": "3.4.14",
+      "talon-snippets": "1.3.0",
+      "tinycolor2": "1.6.0",
+      "trie-search": "2.2.0",
+      "ts-jest": "29.3.4",
+      "ts-loader": "9.5.2",
+      "ts-node": "10.9.2",
+      "type-fest": "4.41.0",
+      "typescript": "5.8.3",
+      "unified": "11.0.5",
+      "unist-util-visit": "5.0.0",
+      "uuid": "11.1.0",
+      "vscode-uri": "3.1.0",
+      "webpack": "5.99.9",
+      "webpack-cli": "6.0.1",
+      "webpack-dev-server": "5.2.2",
+      "zod": "3.25.50"
+    },
     "patchedDependencies": {
       "@types/nearley@2.11.5": "patches/@types__nearley@2.11.5.patch",
       "nearley@2.20.1": "patches/nearley@2.20.1.patch"
