--- a/packages/cheatsheet-local/package.json
+++ b/packages/cheatsheet-local/package.json
@@ -29,33 +29,33 @@
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@cursorless/cheatsheet": "workspace:*",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@cursorless/cheatsheet": "",
+    "react": "",
+    "react-dom": ""
   },
   "devDependencies": {
-    "@effortlessmotion/html-webpack-inline-source-plugin": "1.0.3",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.3.0",
-    "@types/jest": "29.5.14",
-    "@types/node": "20.17.50",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.5",
-    "@types/webpack": "5.28.5",
-    "@webpack-cli/generators": "3.0.7",
-    "autoprefixer": "10.4.21",
-    "css-loader": "7.1.2",
-    "html-webpack-plugin": "5.6.3",
-    "jest": "29.7.0",
-    "postcss": "8.5.4",
-    "postcss-loader": "8.1.1",
-    "style-loader": "4.0.0",
-    "tailwindcss": "3.4.14",
-    "ts-loader": "9.5.2",
-    "ts-node": "10.9.2",
-    "typescript": "5.8.3",
-    "webpack": "5.99.9",
-    "webpack-cli": "6.0.1",
-    "webpack-dev-server": "5.2.2"
+    "@effortlessmotion/html-webpack-inline-source-plugin": "",
+    "@testing-library/dom": "",
+    "@testing-library/react": "",
+    "@types/jest": "",
+    "@types/node": "",
+    "@types/react": "",
+    "@types/react-dom": "",
+    "@types/webpack": "",
+    "@webpack-cli/generators": "",
+    "autoprefixer": "",
+    "css-loader": "",
+    "html-webpack-plugin": "",
+    "jest": "",
+    "postcss": "",
+    "postcss-loader": "",
+    "style-loader": "",
+    "tailwindcss": "",
+    "ts-loader": "",
+    "ts-node": "",
+    "typescript": "",
+    "webpack": "",
+    "webpack-cli": "",
+    "webpack-dev-server": ""
   }
 }
