--- a/packages/cheatsheet/package.json
+++ b/packages/cheatsheet/package.json
@@ -26,24 +26,24 @@
     "watch": "pnpm run --filter @cursorless/cheatsheet --parallel '/^watch:.*/'"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.7.2",
-    "@fortawesome/free-solid-svg-icons": "6.7.2",
-    "@fortawesome/react-fontawesome": "0.2.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-string-replace": "1.1.1",
-    "react-use": "17.6.0"
+    "@fortawesome/fontawesome-svg-core": "",
+    "@fortawesome/free-solid-svg-icons": "",
+    "@fortawesome/react-fontawesome": "",
+    "react": "",
+    "react-dom": "",
+    "react-string-replace": "",
+    "react-use": ""
   },
   "devDependencies": {
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.3.0",
-    "@types/jest": "29.5.14",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.5",
-    "@types/react-helmet": "6.1.11",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "30.0.0-beta.3",
-    "ts-jest": "29.3.4",
-    "typescript": "5.8.3"
+    "@testing-library/dom": "",
+    "@testing-library/react": "",
+    "@types/jest": "",
+    "@types/react": "",
+    "@types/react-dom": "",
+    "@types/react-helmet": "",
+    "jest": "",
+    "jest-environment-jsdom": "",
+    "ts-jest": "",
+    "typescript": ""
   }
 }
