--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -25,16 +25,16 @@
     "watch": "pnpm run --filter @cursorless/common --parallel '/^watch:.*/'"
   },
   "dependencies": {
-    "lodash-es": "4.17.21",
-    "vscode-uri": "3.1.0"
+    "lodash-es": "",
+    "vscode-uri": ""
   },
   "devDependencies": {
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/mocha": "10.0.10",
-    "cross-spawn": "7.0.6",
-    "fast-check": "4.1.1",
-    "js-yaml": "4.1.0",
-    "mocha": "11.5.0"
+    "@types/js-yaml": "",
+    "@types/lodash-es": "",
+    "@types/mocha": "",
+    "cross-spawn": "",
+    "fast-check": "",
+    "js-yaml": "",
+    "mocha": ""
   }
 }
