--- a/packages/cursorless-engine/package.json
+++ b/packages/cursorless-engine/package.json
@@ -27,29 +27,29 @@
     "watch": "pnpm run --filter @cursorless/cursorless-engine --parallel '/^watch:.*/'"
   },
   "dependencies": {
-    "@cursorless/common": "workspace:*",
-    "@cursorless/node-common": "workspace:*",
-    "@cursorless/sentence-parser": "workspace:*",
-    "immer": "10.1.1",
-    "immutability-helper": "3.1.1",
-    "itertools": "2.4.1",
-    "lodash-es": "4.17.21",
-    "moo": "0.5.2",
-    "nearley": "2.20.1",
-    "talon-snippets": "1.3.0",
-    "uuid": "11.1.0",
-    "zod": "3.25.50"
+    "@cursorless/common": "",
+    "@cursorless/node-common": "",
+    "@cursorless/sentence-parser": "",
+    "immer": "",
+    "immutability-helper": "",
+    "itertools": "",
+    "lodash-es": "",
+    "moo": "",
+    "nearley": "",
+    "talon-snippets": "",
+    "uuid": "",
+    "zod": ""
   },
   "devDependencies": {
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/mocha": "10.0.10",
-    "@types/moo": "0.5.10",
-    "@types/nearley": "2.11.5",
-    "@types/sinon": "17.0.4",
-    "@types/uuid": "10.0.0",
-    "js-yaml": "4.1.0",
-    "mocha": "11.5.0",
-    "sinon": "20.0.0"
+    "@types/js-yaml": "",
+    "@types/lodash-es": "",
+    "@types/mocha": "",
+    "@types/moo": "",
+    "@types/nearley": "",
+    "@types/sinon": "",
+    "@types/uuid": "",
+    "js-yaml": "",
+    "mocha": "",
+    "sinon": ""
   }
 }
