--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -29,27 +29,27 @@
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@cursorless/cheatsheet": "workspace:*",
-    "@mdx-js/loader": "3.1.0",
-    "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.3.3",
-    "next": "15.3.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-player": "2.16.0"
+    "@cursorless/cheatsheet": "",
+    "@mdx-js/loader": "",
+    "@mdx-js/react": "",
+    "@next/mdx": "",
+    "next": "",
+    "react": "",
+    "react-dom": "",
+    "react-player": ""
   },
   "devDependencies": {
-    "@svgr/webpack": "8.1.0",
-    "@types/mdx": "2.0.13",
-    "@types/node": "20.17.50",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.5",
-    "autoprefixer": "10.4.21",
-    "eslint": "9.28.0",
-    "eslint-config-next": "15.3.3",
-    "http-server": "14.1.1",
-    "postcss": "8.5.4",
-    "tailwindcss": "3.4.14",
-    "typescript": "5.8.3"
+    "@svgr/webpack": "",
+    "@types/mdx": "",
+    "@types/node": "",
+    "@types/react": "",
+    "@types/react-dom": "",
+    "autoprefixer": "",
+    "eslint": "",
+    "eslint-config-next": "",
+    "http-server": "",
+    "postcss": "",
+    "tailwindcss": "",
+    "typescript": ""
   }
 }
