--- a/packages/cursorless-tutorial/package.json
+++ b/packages/cursorless-tutorial/package.json
@@ -22,12 +22,12 @@
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@cursorless/common": "workspace:*",
-    "@cursorless/cursorless-engine": "workspace:*",
-    "immer": "10.1.1",
-    "lodash-es": "4.17.21"
+    "@cursorless/common": "",
+    "@cursorless/cursorless-engine": "",
+    "immer": "",
+    "lodash-es": ""
   },
   "devDependencies": {
-    "@types/lodash-es": "4.17.12"
+    "@types/lodash-es": ""
   }
 }
