--- a/packages/meta-updater/package.json
+++ b/packages/meta-updater/package.json
@@ -20,20 +20,20 @@
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@cursorless/common": "workspace:*",
-    "@pnpm/lockfile-file": "9.1.3",
-    "@pnpm/logger": "1001.0.0",
-    "@pnpm/types": "1000.6.0",
-    "@types/normalize-path": "3.0.2",
-    "js-yaml": "4.1.0",
-    "lodash-es": "4.17.21",
-    "normalize-path": "3.0.0",
-    "path-exists": "5.0.0",
-    "type-fest": "4.41.0"
+    "@cursorless/common": "",
+    "@pnpm/lockfile-file": "",
+    "@pnpm/logger": "",
+    "@pnpm/types": "",
+    "@types/normalize-path": "",
+    "js-yaml": "",
+    "lodash-es": "",
+    "normalize-path": "",
+    "path-exists": "",
+    "type-fest": ""
   },
   "devDependencies": {
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "esbuild": "0.25.5"
+    "@types/js-yaml": "",
+    "@types/lodash-es": "",
+    "esbuild": ""
   }
 }
