--- a/packages/sentence-parser/package.json
+++ b/packages/sentence-parser/package.json
@@ -22,7 +22,7 @@
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "devDependencies": {
-    "@types/mocha": "10.0.10",
-    "mocha": "11.5.0"
+    "@types/mocha": "",
+    "mocha": ""
   }
 }
