--- a/packages/cheatsheet/package.json
+++ b/packages/cheatsheet/package.json
@@ -38,12 +38,12 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.3.0",
     "@types/jest": "29.5.14",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.5",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/react-helmet": "6.1.11",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "30.0.0-beta.3",
-    "ts-jest": "29.3.4",
+    "jest": "30.0.0",
+    "jest-environment-jsdom": "30.0.0",
+    "ts-jest": "29.4.0",
     "typescript": "5.8.3"
   }
 }
