--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -67,6 +67,8 @@
     "@tailwindcss/postcss": "4.1.10",
     "@tsconfig/docusaurus": "2.0.3",
     "@types/mdast": "4.0.4",
+    "@types/react": "19.1.8",
+    "postcss": "8.5.5",
     "tailwindcss": "3.4.17",
     "typescript": "5.8.3",
     "unified": "11.0.5"
