--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -12,6 +12,12 @@
       "default": "./out/index.js"
     }
   },
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {},
+      "autoprefixer": {}
+    }
+  },
   "browserslist": {
     "production": [
       ">0.5%",
@@ -63,7 +69,7 @@
     "@types/mdast": "4.0.4",
     "@types/react": "19.1.8",
     "postcss": "8.5.5",
-    "tailwindcss": "3.4.14",
+    "tailwindcss": "3.4.17",
     "typescript": "5.8.3",
     "unified": "11.0.5"
   }
