--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,15 +100,13 @@ jobs:
         env:
           NEOVIM_PATH: ${{ steps.vim.outputs.executable }}
 
-      # FIXME: Re-enable neovim lua tests
-      # https://github.com/cursorless-dev/cursorless/issues/2946
-      # - name: Run neovim lua tests (Linux)
-      #   uses: ./.github/actions/test-neovim-lua/
-      #   if: runner.os == 'Linux' && matrix.app_version == 'stable'
+      - name: Run neovim lua tests (Linux)
+        uses: ./.github/actions/test-neovim-lua/
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
-      # - name: Run neovim lua lint (Linux)
-      #   uses: ./.github/actions/lint-lua-ls/
-      #   if: runner.os == 'Linux' && matrix.app_version == 'stable'
+      - name: Run neovim lua lint (Linux)
+        uses: ./.github/actions/lint-lua-ls/
+        if: runner.os == 'Linux' && matrix.app_version == 'stable'
 
       - name: Create vscode dist that can be installed locally
         run: pnpm -F @cursorless/cursorless-vscode populate-dist --local-install
