--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -42,7 +42,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "compile": "tsc --build",
     "watch": "tsc --build --watch",
-    "prepare-assets": "my-ts-node scripts/prepare-assets.ts",
+    "prepare-assets": "my-ts-node src/scripts/prepare-assets.ts",
     "clean": "pnpm clear && rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
