Visualize scope tests in docs (#3016)
![image](https://github.com/user-attachments/assets/5e258b8e-2959-4843-865b-d585e170fc15)

--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -59,9 +59,11 @@
     "prism-react-renderer": "2.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "shiki": "3.7.0",
     "unist-util-visit": "5.0.0"
   },
   "devDependencies": {
+    "@cursorless/node-common": "workspace:*",
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/types": "3.8.1",
     "@tailwindcss/postcss": "4.1.10",
