Removed @webpack-cli/generators dependency

--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
       "nearley@2.20.1": "patches/nearley@2.20.1.patch"
     },
     "overrides": {
-      "@docusaurus/core>webpack-dev-server": "5.2.2",
-      "@octokit/core": "6.1.5"
+      "@docusaurus/core>webpack-dev-server": "5.2.2"
     }
   }
 }
