Update meta updater version (#3033)

--- a/packages/meta-updater/package.json
+++ b/packages/meta-updater/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "esbuild ./src/index.ts --conditions=cursorless:bundler --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
+    "build": "esbuild ./src/index.ts --conditions=cursorless:bundler --bundle --outfile=dist/index.cjs --format=cjs --platform=node --external:@reflink/*",
     "compile": "tsc --build",
     "watch": "tsc --build --watch",
     "clean": "rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
