--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "watch:tsc": "tsc --build --watch"
   },
   "devDependencies": {
-    "@pnpm/meta-updater": "2.0.4",
+    "@pnpm/meta-updater": "2.0.6",
     "@types/node": "24.0.12",
     "@typescript-eslint/eslint-plugin": "8.36.0",
     "@typescript-eslint/parser": "8.36.0",
@@ -56,8 +56,7 @@
       "nearley@2.20.1": "patches/nearley@2.20.1.patch"
     },
     "overrides": {
-      "@docusaurus/core>webpack-dev-server": "5.2.2",
-      "@octokit/core": "6.1.5"
+      "@docusaurus/core>webpack-dev-server": "5.2.2"
     }
   }
 }
