Update cross spawn

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "nearley@2.20.1": "patches/nearley@2.20.1.patch"
     },
     "overrides": {
-      "@docusaurus/core>webpack-dev-server": "5.2.2"
+      "@docusaurus/core>webpack-dev-server": "5.2.2",
+      "@yarnpkg/shell>cross-spawn": "7.0.6"
     }
   }
 }
