--- a/packages/cheatsheet-local/package.json
+++ b/packages/cheatsheet-local/package.json
@@ -30,31 +30,31 @@
   },
   "dependencies": {
     "@cursorless/cheatsheet": "workspace:*",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@effortlessmotion/html-webpack-inline-source-plugin": "1.0.3",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.3.0",
-    "@types/jest": "30.0.0",
-    "@types/node": "24.0.12",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "@types/webpack": "5.28.5",
-    "autoprefixer": "10.4.21",
-    "css-loader": "7.1.2",
-    "html-webpack-plugin": "5.6.3",
-    "jest": "30.0.4",
-    "postcss": "8.5.6",
-    "postcss-loader": "8.1.1",
-    "style-loader": "4.0.0",
-    "tailwindcss": "3.4.17",
-    "ts-loader": "9.5.2",
-    "ts-node": "10.9.2",
-    "typescript": "5.8.3",
-    "webpack": "5.100.0",
-    "webpack-cli": "6.0.1",
-    "webpack-dev-server": "5.2.2"
+    "@effortlessmotion/html-webpack-inline-source-plugin": "^1.0.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.14",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/webpack": "^5.28.5",
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "jest": "^30.0.4",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
