--- a/packages/cheatsheet/package.json
+++ b/packages/cheatsheet/package.json
@@ -26,24 +26,24 @@
     "watch": "pnpm run --filter @cursorless/cheatsheet --parallel '/^watch:.*/'"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.7.2",
-    "@fortawesome/free-solid-svg-icons": "6.7.2",
-    "@fortawesome/react-fontawesome": "0.2.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-string-replace": "1.1.1",
-    "react-use": "17.6.0"
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-string-replace": "^1.1.1",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.3.0",
-    "@types/jest": "30.0.0",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "@types/react-helmet": "6.1.11",
-    "jest": "30.0.4",
-    "jest-environment-jsdom": "30.0.4",
-    "ts-jest": "29.4.0",
-    "typescript": "5.8.3"
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/react-helmet": "^6.1.11",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.8.3"
   }
 }
