--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -25,19 +25,19 @@
     "watch": "pnpm run --filter @cursorless/common --parallel '/^watch:.*/'"
   },
   "dependencies": {
-    "itertools": "2.4.1",
-    "lodash-es": "4.17.21",
-    "tinycolor2": "1.6.0",
-    "vscode-uri": "3.1.0"
+    "itertools": "^2.4.1",
+    "lodash-es": "^4.17.21",
+    "tinycolor2": "^1.6.0",
+    "vscode-uri": "^3.1.0"
   },
   "devDependencies": {
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/mocha": "10.0.10",
-    "@types/tinycolor2": "1.4.6",
-    "cross-spawn": "7.0.6",
-    "fast-check": "4.2.0",
-    "js-yaml": "4.1.0",
-    "mocha": "11.7.1"
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mocha": "^10.0.10",
+    "@types/tinycolor2": "^1.4.6",
+    "cross-spawn": "^7.0.6",
+    "fast-check": "^4.2.0",
+    "js-yaml": "^4.1.0",
+    "mocha": "^11.7.1"
   }
 }
