--- a/packages/cursorless-engine/package.json
+++ b/packages/cursorless-engine/package.json
@@ -30,26 +30,26 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/node-common": "workspace:*",
     "@cursorless/sentence-parser": "workspace:*",
-    "immer": "10.1.1",
-    "immutability-helper": "3.1.1",
-    "itertools": "2.4.1",
-    "lodash-es": "4.17.21",
-    "moo": "0.5.2",
-    "nearley": "2.20.1",
-    "talon-snippets": "1.3.0",
-    "uuid": "11.1.0",
-    "zod": "4.0.2"
+    "immer": "^10.1.1",
+    "immutability-helper": "^3.1.1",
+    "itertools": "^2.4.1",
+    "lodash-es": "^4.17.21",
+    "moo": "^0.5.2",
+    "nearley": "^2.20.1",
+    "talon-snippets": "^1.3.0",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/mocha": "10.0.10",
-    "@types/moo": "0.5.10",
-    "@types/nearley": "2.11.5",
-    "@types/sinon": "17.0.4",
-    "@types/uuid": "10.0.0",
-    "js-yaml": "4.1.0",
-    "mocha": "11.7.1",
-    "sinon": "21.0.0"
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mocha": "^10.0.10",
+    "@types/moo": "^0.5.10",
+    "@types/nearley": "^2.11.5",
+    "@types/sinon": "^17.0.4",
+    "@types/uuid": "^10.0.0",
+    "js-yaml": "^4.1.0",
+    "mocha": "^11.7.1",
+    "sinon": "^21.0.0"
   }
 }
