--- a/packages/cursorless-everywhere-talon-core/package.json
+++ b/packages/cursorless-everywhere-talon-core/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "@cursorless/common": "workspace:*",
     "@cursorless/cursorless-engine": "workspace:*",
-    "lodash-es": "4.17.21",
-    "vscode-uri": "3.1.0"
+    "lodash-es": "^4.17.21",
+    "vscode-uri": "^3.1.0"
   },
   "devDependencies": {
-    "@types/lodash-es": "4.17.12"
+    "@types/lodash-es": "^4.17.12"
   }
 }
