--- a/packages/cursorless-everywhere-talon-e2e/package.json
+++ b/packages/cursorless-everywhere-talon-e2e/package.json
@@ -18,7 +18,7 @@
     "@cursorless/test-case-recorder": "workspace:*"
   },
   "devDependencies": {
-    "@types/mocha": "10.0.10",
-    "mocha": "11.7.1"
+    "@types/mocha": "^10.0.10",
+    "mocha": "^11.7.1"
   }
 }
