--- a/packages/cursorless-neovim-e2e/package.json
+++ b/packages/cursorless-neovim-e2e/package.json
@@ -26,10 +26,10 @@
     "@cursorless/test-case-recorder": "workspace:*"
   },
   "devDependencies": {
-    "@types/chai": "5.2.2",
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash": "4.17.20",
-    "@types/sinon": "17.0.4",
-    "neovim": "5.3.0"
+    "@types/chai": "^5.2.2",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash": "^4.17.20",
+    "@types/sinon": "^17.0.4",
+    "neovim": "^5.3.0"
   }
 }
