--- a/packages/cursorless-org-docs/package.json
+++ b/packages/cursorless-org-docs/package.json
@@ -45,34 +45,34 @@
     "clean": "pnpm clear && rm -rf ./out tsconfig.tsbuildinfo ./dist ./build"
   },
   "dependencies": {
-    "@algolia/client-search": "5.32.0",
+    "@algolia/client-search": "^5.33.0",
     "@cursorless/common": "workspace:*",
-    "@docsearch/react": "3.9.0",
-    "@docusaurus/core": "3.8.1",
-    "@docusaurus/preset-classic": "3.8.1",
-    "@docusaurus/theme-classic": "3.8.1",
-    "@docusaurus/theme-common": "3.8.1",
-    "@docusaurus/theme-search-algolia": "3.8.1",
-    "@mdx-js/react": "3.1.0",
-    "clsx": "2.1.1",
-    "mdast-util-find-and-replace": "3.0.2",
-    "prism-react-renderer": "2.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "shiki": "3.7.0",
-    "unist-util-visit": "5.0.0"
+    "@docsearch/react": "^3.9.0",
+    "@docusaurus/core": "^3.8.1",
+    "@docusaurus/preset-classic": "^3.8.1",
+    "@docusaurus/theme-classic": "^3.8.1",
+    "@docusaurus/theme-common": "^3.8.1",
+    "@docusaurus/theme-search-algolia": "^3.8.1",
+    "@mdx-js/react": "^3.1.0",
+    "clsx": "^2.1.1",
+    "mdast-util-find-and-replace": "^3.0.2",
+    "prism-react-renderer": "^2.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "shiki": "^3.8.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@cursorless/node-common": "workspace:*",
-    "@docusaurus/module-type-aliases": "3.8.1",
-    "@docusaurus/types": "3.8.1",
-    "@tailwindcss/postcss": "4.1.11",
-    "@tsconfig/docusaurus": "2.0.3",
-    "@types/mdast": "4.0.4",
-    "@types/react": "19.1.8",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.8.3",
-    "unified": "11.0.5"
+    "@docusaurus/module-type-aliases": "^3.8.1",
+    "@docusaurus/types": "^3.8.1",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tsconfig/docusaurus": "^2.0.3",
+    "@types/mdast": "^4.0.4",
+    "@types/react": "^19.1.8",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "unified": "^11.0.5"
   }
 }
