--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -31,26 +31,26 @@
   "dependencies": {
     "@cursorless/cheatsheet": "workspace:*",
     "@cursorless/common": "workspace:*",
-    "@mdx-js/loader": "3.1.0",
-    "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.3.5",
-    "next": "15.3.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-player": "3.1.0"
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.1",
+    "next": "^15.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-player": "^3.2.1"
   },
   "devDependencies": {
-    "@svgr/webpack": "8.1.0",
-    "@types/mdx": "2.0.13",
-    "@types/node": "24.0.12",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "autoprefixer": "10.4.21",
-    "eslint": "9.30.1",
-    "eslint-config-next": "15.3.5",
-    "http-server": "14.1.1",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.8.3"
+    "@svgr/webpack": "^8.1.0",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^24.0.14",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.1",
+    "http-server": "^14.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   }
 }
