--- a/packages/cursorless-vscode-e2e/package.json
+++ b/packages/cursorless-vscode-e2e/package.json
@@ -22,21 +22,21 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/node-common": "workspace:*",
     "@cursorless/vscode-common": "workspace:*",
-    "immer": "10.1.1",
-    "lodash-es": "4.17.21"
+    "immer": "^10.1.1",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/chai": "5.2.2",
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/mocha": "10.0.10",
-    "@types/semver": "7.7.0",
-    "@types/sinon": "17.0.4",
+    "@types/chai": "^5.2.2",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mocha": "^10.0.10",
+    "@types/semver": "^7.7.0",
+    "@types/sinon": "^17.0.4",
     "@types/vscode": "1.82.0",
-    "chai": "5.2.1",
-    "js-yaml": "4.1.0",
-    "mocha": "11.7.1",
-    "semver": "7.7.2",
-    "sinon": "21.0.0"
+    "chai": "^5.2.1",
+    "js-yaml": "^4.1.0",
+    "mocha": "^11.7.1",
+    "semver": "^7.7.2",
+    "sinon": "^21.0.0"
   }
 }
