--- a/packages/cursorless-vscode-tutorial-webview/package.json
+++ b/packages/cursorless-vscode-tutorial-webview/package.json
@@ -21,13 +21,13 @@
   },
   "dependencies": {
     "@cursorless/common": "workspace:*",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "@types/vscode-webview": "1.57.5",
-    "tailwindcss": "3.4.17"
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/vscode-webview": "^1.57.5",
+    "tailwindcss": "^3.4.17"
   }
 }
