--- a/packages/cursorless-vscode/package.json
+++ b/packages/cursorless-vscode/package.json
@@ -1284,29 +1284,29 @@
     "@cursorless/node-common": "workspace:*",
     "@cursorless/test-case-recorder": "workspace:*",
     "@cursorless/vscode-common": "workspace:*",
-    "glob": "11.0.3",
-    "itertools": "2.4.1",
-    "lodash-es": "4.17.21",
-    "nearley": "2.20.1",
-    "semver": "7.7.2",
-    "talon-snippets": "1.3.0",
-    "trie-search": "2.2.0",
-    "uuid": "11.1.0",
-    "vscode-uri": "3.1.0"
+    "glob": "^11.0.3",
+    "itertools": "^2.4.1",
+    "lodash-es": "^4.17.21",
+    "nearley": "^2.20.1",
+    "semver": "^7.7.2",
+    "talon-snippets": "^1.3.0",
+    "trie-search": "^2.2.0",
+    "uuid": "^11.1.0",
+    "vscode-uri": "^3.1.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "11.0.4",
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "@types/nearley": "2.11.5",
-    "@types/node": "24.0.12",
-    "@types/semver": "7.7.0",
-    "@types/sinon": "17.0.4",
-    "@types/uuid": "10.0.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "@types/nearley": "^2.11.5",
+    "@types/node": "^24.0.14",
+    "@types/semver": "^7.7.0",
+    "@types/sinon": "^17.0.4",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "1.82.0",
-    "esbuild": "0.25.6",
-    "fast-xml-parser": "5.2.5",
-    "fs-extra": "11.3.0",
-    "sinon": "21.0.0"
+    "esbuild": "^0.25.6",
+    "fast-xml-parser": "^5.2.5",
+    "fs-extra": "^11.3.0",
+    "sinon": "^21.0.0"
   }
 }
