--- a/packages/neovim-common/package.json
+++ b/packages/neovim-common/package.json
@@ -25,13 +25,13 @@
     "@cursorless/common": "workspace:*",
     "@cursorless/neovim-registry": "workspace:*",
     "@cursorless/node-common": "workspace:*",
-    "lodash": "4.17.21",
-    "neovim": "5.3.0",
-    "vscode-uri": "3.1.0"
+    "lodash": "^4.17.21",
+    "neovim": "^5.3.0",
+    "vscode-uri": "^3.1.0"
   },
   "devDependencies": {
-    "@types/lodash": "4.17.20",
-    "@types/uuid": "10.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "1.82.0"
   }
 }
