--- a/packages/node-common/package.json
+++ b/packages/node-common/package.json
@@ -23,14 +23,14 @@
   },
   "dependencies": {
     "@cursorless/common": "workspace:*",
-    "glob": "11.0.3",
-    "lodash-es": "4.17.21"
+    "glob": "^11.0.3",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/chai": "5.2.2",
-    "@types/js-yaml": "4.0.9",
-    "@types/lodash-es": "4.17.12",
-    "chai": "5.2.1",
-    "js-yaml": "4.1.0"
+    "@types/chai": "^5.2.2",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "chai": "^5.2.1",
+    "js-yaml": "^4.1.0"
   }
 }
