--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
     "watch:tsc": "tsc --build --watch"
   },
   "devDependencies": {
-    "@pnpm/meta-updater": "2.0.6",
-    "@types/node": "24.0.12",
-    "@typescript-eslint/eslint-plugin": "8.36.0",
-    "@typescript-eslint/parser": "8.36.0",
-    "cross-env": "7.0.3",
-    "esbuild": "0.25.6",
-    "eslint": "9.30.1",
-    "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "4.4.4",
-    "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-mocha": "10.5.0",
-    "eslint-plugin-unicorn": "56.0.1",
-    "eslint-plugin-unused-imports": "4.1.4",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.14",
-    "syncpack": "13.0.4",
-    "typescript": "5.8.3"
+    "@pnpm/meta-updater": "^2.0.6",
+    "@types/node": "^24.0.14",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.25.6",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-mocha": "^10.5.0",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "~3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "syncpack": "^13.0.4",
+    "typescript": "^5.8.3"
   },
   "pnpm": {
     "patchedDependencies": {
