Migrating tailwindcss to v4

--- a/packages/cursorless-org-docs/tsconfig.json
+++ b/packages/cursorless-org-docs/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "es2022"],
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
+    "module": "nodenext",
     "esModuleInterop": true,
     "emitDeclarationOnly": false,
     "jsx": "react"
