semver mismatch fix

--- a/packages/cursorless-org/package.json
+++ b/packages/cursorless-org/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/mdx": "^2.0.13",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
