--- a/packages/meta-updater/tsconfig.json
+++ b/packages/meta-updater/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2020",
-    "module": "ES2020",
+    "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
     "moduleDetection": "force",
     "esModuleInterop": true
