--- a/packages/cheatsheet/tsconfig.json
+++ b/packages/cheatsheet/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "target": "es2022",
+    "lib": ["dom", "es2022"],
     "jsx": "react-jsx",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "lib": ["es5", "es6", "dom"]
+    "skipLibCheck": true
   },
   "references": [],
   "include": [
