--- a/data/fixtures/recorded/relativeScopes/clearNextCall4.yml
+++ b/data/fixtures/recorded/relativeScopes/clearNextCall4.yml
@@ -20,7 +20,7 @@ initialState:
       active: {line: 0, character: 1}
   marks: {}
 finalState:
-  documentContents: "aaa(bbb(), ccc()) + "
+  documentContents: aaa(, ccc()) + ddd()
   selections:
-    - anchor: {line: 0, character: 20}
-      active: {line: 0, character: 20}
+    - anchor: {line: 0, character: 4}
+      active: {line: 0, character: 4}
