--- a/data/fixtures/recorded/relativeScopes/clearSecondNextCall.yml
+++ b/data/fixtures/recorded/relativeScopes/clearSecondNextCall.yml
@@ -14,13 +14,13 @@ command:
           direction: forward
   usePrePhraseSnapshot: true
 initialState:
-  documentContents: aaa(bbb(), ccc()) + ddd() + eee()
+  documentContents: aaa(bbb(), ccc()) + ddd()
   selections:
     - anchor: {line: 0, character: 10}
       active: {line: 0, character: 10}
   marks: {}
 finalState:
-  documentContents: "aaa(bbb(), ccc()) + ddd() + "
+  documentContents: "aaa(bbb(), ccc()) + "
   selections:
-    - anchor: {line: 0, character: 28}
-      active: {line: 0, character: 28}
+    - anchor: {line: 0, character: 20}
+      active: {line: 0, character: 20}
